[package]
name = "nodepaths"
version = "0.1.0"
authors = ["Alex Greig <78413528+alexjgreig@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3.1.0"
rand = "0.8.4"
toml = "0.5.8"
# `serde` is renamed to `c_serde` in order to avoid a name collision between
# importing the serde dependency and enabling the curve25519-dalek/serde feature
serde = { version = "1.0.125", features = ["derive"] }
c_serde = { package = "serde", version = "1.0.125", default-features = false, optional = true, features = ["derive"] }
bincode = "1.3.3"
aes = "0.7.0"
typenum = "1.13.0"

bindings = {path = "bindings"}
windows = "0.10.0"
futures = "0.3.15"
tokio = { version = "1.7.0", features = ["full"] }


[features]
curve_serde = ["c_serde", "curve25519-dalek/serde"]
